# AgentEvolve

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_README.md  QUICKSTART.md  Readme.md
ShinkaEvolve/: pyproject.toml
ShinkaEvolve/configs/evolution/: large_budget.yaml  medium_budget.yaml  small_budget.yaml
ShinkaEvolve/configs/task/: red_teaming.yaml
ShinkaEvolve/configs/variant/: red_teaming_example.yaml
ShinkaEvolve/examples/red_teaming/: CLI_USAGE.md  EVOLUTION_LOGIC_EXPLAINED.md  EXAMPLE_OUTPUT.md  GETTING_STARTED.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  evaluate.py  initial.py  initial_program.py  run_evo.py
ShinkaEvolve/results/shinka_circle_packing/2025.10.19151834_example/: evolution_db.sqlite  (+2 more)
ShinkaEvolve/shinka.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-evolve/: .env.example  README.md  __init__.py  launch.sh  pyproject.toml
agent-evolve/agent_evolve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-evolve/core/: __init__.py  agent.py  evaluator.py  templates.py
agent-evolve/examples/: README.md  example_red_teaming.py
agent-evolve/ui/: __init__.py  app.py
experiments/exp_20251022_211904/: config.json  evaluate.py  initial.py  run_evolution.py
landing-app/: package-lock.json  package.json
landing-app/src/app/: globals.css  layout.tsx  page.tsx
landing-app/src/components/: AiLabs.tsx  BootEffects.tsx  ContentWrapObserver.tsx  Demo.tsx  Hero.tsx  Problem.tsx  Quote.tsx  RealWorldAttackDemo.tsx  SequentialSection.tsx  SnapToTop.tsx  Team.tsx
landing-app/src/lib/: reveal.ts
(+566 files in other folders)
